--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,9 +1,10 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  */
   font-weight: normal;
 }
 
@@ -28,8 +29,9 @@ a,
   }
 
   #app {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
+    */
   }
 }
